--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "6.7.0",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.9.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
