--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@prisma/client": "6.7.0",
     "bcryptjs": "^3.0.2",
+    "es-toolkit": "^1.37.2",
     "framer-motion": "^12.9.4",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.1",
