--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+      "postinstall": "prisma generate"
   },
   "dependencies": {
     "@chakra-ui/form-control": "^2.2.0",
